Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47803

winrt: First capture doesn't produce image

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.1
    • 5.6
    • Multimedia
    • None
    • Lumia 1520 & 630
      Qt 5.7 (dev branch)
    • WinRT
    • a0a20157efab21c07f327c70bd8603b5973f9a39

    Description

      QML Camera doesn't run any of its callbacks (captureFailed, imageCaptured, imageSaved) when first capture is done. Subsequent capture calls work as expected.

      Steps:
      1. Run attached example.
      2. Tap screen on device.
      Expected: console log from imageCapture / imageSaved / captureFailed.
      Actual: Shutter sound is played but no console logs nor image produced.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mkalinow Maurice Kalinowski
            samuelnevala Samuel Nevala
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes